<resources>
    <string name="app_name">RxRedditDemoApp</string>
    <string name="notification_channel_name_subscriptions">RxRedditDemoApp subscription notifications.</string>
    <string name="home_title">Home</string>
    <string name="bottom_follows_title">Follows</string>
    <string name="bottom_favorites_title">Favorites</string>
    <string name="common_placeholder_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="common_date_author_placeholder_text">submitted … by …</string>
    <string name="common_comments_placeholder_text">0 comments</string>
    <string name="drawer_headers_default_subreddits">Default image subreddits</string>
    <string name="drawer_header_your_subreddits">Your subreddits</string>
    <string name="drawer_header_recommended_subreddits">Recommended subreddits</string>
    <string name="common_nsfw_tag">NSFW</string>
    <string name="drawer_title_subreddits">Subreddits</string>
    <string name="home_no_media_in_sub_info">This subreddit does not seem to contain any direct media link posts.\n Please try a picture subreddit.</string>
    <string name="post_viewer_title">Post Viewer</string>
    <string name="post_viewer_slideshow_on">Slideshow started.</string>
    <string name="post_viewer_slideshow_off">Slideshow stopped.</string>
    <string name="post_viewer_comments">%1$d comments</string>
    <string name="favorites_no_media">You have not favorited any posts yet, so there\'s nothing to show here. Don\'t worry, here\'s a birdie to cheer you up!</string>
    <string name="home_action_set_as_default_sub">Set as your Default subreddit</string>
    <string name="home_action_delete_subreddit">Delete Subreddit</string>
    <string name="home_action_remove_from_your">Remove from Your subreddits</string>
    <string name="home_action_subreddit_add_to_your">Add to Your subreddits</string>
    <string name="home_action_subreddit_add_to_favorites">Add to Favorite subreddits</string>
    <string name="common_action_settings">Settings</string>
    <string name="favorites_action_delete_all">Clear all posts from Favorites</string>
    <string name="home_action_subreddit_remove_from_favorites">Remove from Favorite subreddits</string>
    <string name="common_message_cancel">Cancel</string>
    <string name="common_message_yes">Yes</string>
    <string name="post_popup_action_open_link">Open Reddit link</string>
    <string name="post_popup_action_download">Download image</string>
    <string name="post_popup_action_set_as_background">Set image as your wallpaper</string>
    <string name="post_popup_action_go_to_user">Go to %1$s\'s submissions</string>
    <string name="common_error_something_went_wrong">Uh-oh, something went wrong :(</string>
    <string name="options_wallpaper_error_something_went_wrong">Uh-oh, something went wrong! Please try downloading the image and setting it as a wallpaper from your Gallery!</string>
    <string name="follows_message_no_media">There are no followed users to show yet. You can add users you\'d like to follow from the drawer, fow example.</string>
    <string name="drawer_header_your_followed_feeds">Users you follow</string>
    <string name="common_message_done">Done!</string>
    <string name="common_message_could_not_perform">Could not perform action :(</string>
    <string name="drawer_query_hint_subreddit">Add a new subreddit</string>
    <string name="drawer_query_hint_follows">Go to user feed</string>
    <string name="follows_error_message_http_404">Uh-oh, it seems like this user doesn\'t exist! </string>
    <string name="common_error_message_network">Uh-oh, something went wrong! Please check your network connection or try again later!</string>
    <string name="home_error_message_http_404">Uh-oh. This sub might not exist after all…</string>
    <string name="home_message_no_posts_in_sub">This sub doesn\'t seem to have any image posts. But here\'s a good boy instead!</string>
    <string name="drawer_title_follows">Follows</string>
    <string name="follows_message_no_posts_for_user">This user doesn\'t seem to have posted any image content yet. So here is a cat.</string>
    <string name="follows_action_add_user">Follow user</string>
    <string name="follows_action_delete_user">Unfollow user</string>
    <string name="follows_action_subscribe">Subscribe to user for notifications</string>
    <string name="follows_action_unsubscribe">Unsubscribe from user</string>
    <string name="follows_snack_added">%1$s added to your follows!</string>
    <string name="follows_snack_deleted">No longer following %1$s!</string>
    <string name="follows_snack_subscribed">Subscribed for notifications to %1$s\'s posts!</string>
    <string name="follows_snack_unsubscribed">Unsubscribed from %1$s\'s post notifications!</string>
    <string name="follows_no_posts_aggregate">You aren\'t following any users yet, so there is nothing to show here. Here\'s a cat instead!</string>
    <string name="follows_default_feed_name">Aggregate feed</string>
    <string name="follows_title_feed_name_template">/u/%1$s\'s posts</string>
    <string name="favorites_snack_deleted_all">Favorites deleted!</string>
    <string name="home_snack_sub_set_as_default">%1$s is set as the default subreddit!</string>
    <string name="home_snack_sub_cant_be_set_as_default">Uh-oh! The sub couldn\'t be set as the default right now:(</string>
    <string name="home_snack_sub_been_deleted">%1$s has been deleted!</string>
    <string name="home_snack_sub_cant_be_deleted">Uh-oh! The sub couldn\'t be deleted right now :/</string>
    <string name="pvf_snack_favorited">Post favorited!</string>
    <string name="pvf_snack_favorite_failed">Failed to favorite post :(</string>
    <string name="pvf_snack_unfavorited">Post no longer in Favorites!</string>
    <string name="pvf_snack_unfavorite_failed">Failed to remove post from Favorites :(</string>
    <string name="pvf_snack_picture_saved">Saved to Pictures!</string>
    <string name="pvf_snack_backround_working_on_it">Working on it…</string>
    <string name="preference_category_generic_title">Generic preferences</string>
    <string name="preference_switch_unblur_nsfw_title">Don\'t blur NSFW posts</string>
    <string name="preference_switch_unblur_nsfw_summary">Toggle this if you want to have all NSFW content shown immediately.</string>
    <string name="preference_theme_entry_auto">Same as device theme.</string>
    <string name="preference_theme_entry_day">Use the light theme.</string>
    <string name="preference_theme_entry_night">Use the dark theme.</string>
    <string name="preference_theme_title">Preferred theme</string>
    <string name="preference_theme_summary">Choose how the app looks!</string>
    <string name="preference_list_hud_title">The HUD disappears after…</string>
    <string name="preference_list_hud_summary">When you have a post open, this is how long the interface will stay visible. You can interact with it again by touching in the middle of the image displayed.</string>
    <string name="preference_hud_3_sec">3 seconds</string>
    <string name="preference_hud_5_sec">5 seconds</string>
    <string name="preference_hud_10_sec">10 seconds</string>
    <string name="preference_hud_stay_on">Stay on!</string>
    <string name="preference_category_notifications_title">Notifications preferences</string>
    <string name="preference_list_notifications_title">Notification frequency</string>
    <string name="preference_list_notifications_summary">How often would you like to receive notifications of your Subscribed creators\' new posts?</string>
    <string name="preference_notifications_once_day">Once a day</string>
    <string name="preference_notifications_twice_day">Twice a day</string>
    <string name="preference_notifications_twice_week">Twice a week</string>
    <string name="preference_notifications_once_week">Once a week</string>
    <string name="preference_notifications_never">Never</string>
    <string name="preference_category_about_title">More about this app</string>
    <string name="preference_about_title">About</string>
    <string name="preference_author_title">Author</string>
    <string name="preference_author_summary">A little info about the author of this app.</string>
    <string name="preference_about_summary">What\'s this about?</string>
    <string name="settings_title">Settings</string>
    <string name="follows_subscriptions_feed_name">Subscriptions</string>
    <string name="follows_subscriptions_notification_message">%1$d users you\'re subscribed to have new posts. Check them out!</string>
    <string name="common_action_refresh">Refresh</string>
    <string name="common_quantity_minutes">minute(s)</string>
    <string name="common_quantity_hours">hour(s)</string>
    <string name="common_quantity_days">day(s)</string>
    <string name="common_quantity_years">year(s)</string>
    <string name="common_post_date_author_text">posted %1$d %2$s ago by %3$s to r/%4$s</string>
</resources>