<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_subreddit">

    <fragment
        android:id="@+id/navigation_subreddit"
        android:name="com.b4kancs.rxredditdemo.ui.home.HomeFragment"
        android:label="@string/home_title"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_open_post_viewer"
            app:destination="@+id/navigation_post_viewer" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.b4kancs.rxredditdemo.ui.favorites.FavoritesFragment"
        android:label="@string/bottom_favorites_title"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_subscriptions"
        android:name="com.b4kancs.rxredditdemo.ui.subscriptions.SubscriptionsFragment"
        android:label="@string/bottom_subscriptions_title"
        tools:layout="@layout/fragment_subscriptions" />

    <fragment
        android:id="@+id/navigation_post_viewer"
        android:name="com.b4kancs.rxredditdemo.ui.postviewer.PostViewerFragment"
        android:label="@string/post_viewer_title"
        tools:layout="@layout/fragment_post_viewer">

        <argument
            android:name="position"
            app:argType="integer"
            android:defaultValue="0" />

        <argument
            android:name="pagingDataObservableProvider"
            app:argType="string"
            android:defaultValue="HomeViewModel" />
    </fragment>
</navigation>