<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    android:background="@drawable/sh_rectangle_rounded"
    android:backgroundTint="?attr/colorSurfaceVariant">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_view_rv_main_image"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:backgroundTint="?attr/colorImageBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/top_rounded_imageview" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view_rv_nsfw_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/sh_rectangle_half_rounded"
        android:text="@string/common_nsfw_tag"
        android:textColor="?attr/colorErrorContainer"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/image_view_rv_main_image"
        app:layout_constraintEnd_toEndOf="@id/image_view_rv_main_image"
        app:layout_constraintStart_toStartOf="@id/image_view_rv_main_image"
        app:layout_constraintTop_toTopOf="@id/image_view_rv_main_image" />

    <ImageView
        android:id="@+id/image_view_rv_gallery_indicator"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="8dp"
        android:alpha="0.7"
        android:src="@drawable/ic_gallery_256"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/image_view_rv_main_image"
        app:layout_constraintRight_toLeftOf="@id/text_view_rv_gallery_items" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view_rv_gallery_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="12dp"
        android:alpha="0.7"
        android:text="0"
        android:textColor="@color/md_theme_light_inversePrimary"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/image_view_rv_main_image"
        app:layout_constraintRight_toRightOf="@id/image_view_rv_main_image" />

    <ImageView
        android:id="@+id/image_view_rv_favorite_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingRight="8dp"
        android:visibility="gone"
        android:src="@drawable/ic_baseline_favorite_filled_36"
        app:layout_constraintRight_toRightOf="@id/image_view_rv_main_image"
        app:layout_constraintTop_toTopOf="@id/image_view_rv_main_image" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view_rv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:ellipsize="end"
        android:text="@string/common_placeholder_text"
        android:textColor="?attr/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/text_view_rv_date_author"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_view_rv_main_image" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view_rv_date_author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="2dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/common_date_author_placeholder_text"
        android:textColor="?attr/colorSecondary"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/text_view_rv_comments"
        app:layout_constraintEnd_toStartOf="@id/text_view_rv_cross_post"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view_rv_cross_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="2dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="xpost from ..."
        android:textColor="?attr/colorSecondary"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@id/text_view_rv_date_author"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_rv_title" />

    <ImageView
        android:id="@+id/image_view_rv_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:paddingEnd="4dp"
        android:paddingBottom="4dp"
        android:src="@drawable/ic_baseline_arrow_drop_up_36"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_rv_date_author"
        app:tint="?attr/colorPrimaryInverse" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view_rv_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="4dp"
        android:text="1024"
        android:textColor="?attr/colorSecondary"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/image_view_rv_score"
        app:layout_constraintStart_toEndOf="@id/image_view_rv_score"
        app:layout_constraintTop_toTopOf="@id/image_view_rv_score" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view_rv_comments"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:paddingStart="4dp"
        android:paddingEnd="16dp"
        android:text="@string/common_comments_placeholder_text"
        android:textColor="?attr/colorSecondary"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/image_view_rv_score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/image_view_rv_score" />

</androidx.constraintlayout.widget.ConstraintLayout>